<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">咸鱼也可以翻身</string>
    <string name="no_connect_hint">网络连接失败，建议稍后重试</string>
    <string name="wait">请稍候...</string>
	<string name="no_net_hit">无网络，请联网再刷新一下试试:)</string>
	<string name="note_exit">再按一次后退键，退出程序</string>
	<string name="dialog_title">支付提醒</string>
	<string name="dialog_app">应用名称：咸鱼也可以翻身</string>
	<string name="dialog_pay">价格：</string>
	<string name="dialog_content"> %1$d元</string>
	<string name="dialog_phone">湖南红网新闻网络传播有限责任公司\n客服电话：4007117007</string>
	<string name="dialog_ps">PS:此阅读内容订购后仅限本手机使用</string>
	<string name="sure">确定</string>
	<string name="cancel">取消</string>
	<string name="about">\t\t《咸鱼也可以翻身》单行本由湖南红网新闻网络传播有限责任公司提供，希望协助作者创作出更好的作品，让我们一起为中国原创漫画复苏努力。\n\n\n客服电话：4007117007</string>
	<string name="brief_title">作品简介：</string>
	<string name="brief_content">\t\t长盛不衰的全龄向搞笑：看咸鱼耍宝搞笑，脑洞打开，证明咸鱼也有明天！</string>
	<string name="brief_author">作者：筱筠978535</string>
	<string name="brief_c">\t\t%s</string>
	<string name="brief_a">作者：%s</string>
	<string name="chapter_name">第%1$d章</string>
	<string name="pay_detail">购买详情</string>
	<string name="buy">购买</string>
	<string name="buyed">已购</string>
	<string name="pay_comment">说明：\n\t\t《咸鱼也可以翻身》为故事延展性漫画，需要付费阅读。\n价格为：</string>
	
</resources>
