<?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="260dip"
    android:layout_height="292dip"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@drawable/dialog_bg"
    android:paddingLeft="12dip"
    android:paddingRight="12dip">
 

     <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        
        <TextView
            android:id="@+id/title"
            android:layout_marginTop="2dip"
            android:padding="6dip"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textColor="@color/dialog_title"
            android:textSize="22sp"/>

 
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_line"/>
 
    	<TextView
            android:id="@+id/content1"
            android:layout_marginTop="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_app"
            android:textColor="@color/dialog_content"
            android:textSize="18sp"/>
    	 <TextView
            android:id="@+id/chapter"
            android:layout_marginTop="4dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dialog_content"
            android:textSize="15sp"/>
    	<LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp" >
        <TextView
            android:id="@+id/text_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_pay"
            android:textColor="@color/dialog_content"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_content"
            android:textColor="@color/dialog_title"
            android:textSize="18sp"/>
        </LinearLayout>
        
        <TextView
            android:id="@+id/phone"
            android:layout_marginTop="16dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_phone"
            android:textColor="@color/dialog_gray"
            android:textSize="14sp"/>
        
         <TextView
            android:id="@+id/ps_text"
            android:layout_marginTop="2dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ps"
            android:textColor="@color/dialog_ps"
            android:textSize="14sp"/>
     </LinearLayout>

 
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="53dip"
        android:layout_alignParentBottom="true">
 
        <Button 
            android:id="@+id/positiveButton"
            android:layout_marginLeft="10dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="82dip"
            android:layout_height="26dip"
            android:singleLine="true"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@drawable/dialog_btn_ok"/>
 
        <Button 
            android:id="@+id/negativeButton"
            android:layout_marginRight="10dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="82dip"
            android:layout_height="26dip"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@drawable/dialog_btn_cancel"/>
 
    </RelativeLayout>
 
</RelativeLayout>

</RelativeLayout>