<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/comm_bg"
    android:gravity="center_horizontal"
    android:padding="30dp" >
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColor="@color/brief_txt"
        android:textSize="23sp"
        android:text="@string/brief_title"/>
    
    <TextView 
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:textColor="@color/brief_txt"
        android:textSize="17sp"
        android:text="@string/brief_content"/>
    
    <TextView 
        android:id="@+id/author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:textColor="@color/brief_txt"
        android:textSize="17sp"
        android:text="@string/brief_author"/>
    

</LinearLayout>
